ecmascript/parser/tests/typescript-errors/tsc/decorators/invalid/decoratorOnArrowFunction/input.ts.stderr
error: Unexpected token `=>`. Expected this, import, async, function, [ for array literal, { for object literal, @ for decorator, function, class, null, true, false, number, bigint, string, regexp, ` for template literal, (, or an identifier
 --> $DIR/tests/typescript-errors/tsc/decorators/invalid/decoratorOnArrowFunction/input.ts:3:17
  |
3 | var F = @dec () => {
  |                 ^^

